--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -20,7 +20,7 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 .navbar-btn { width: 40px; }
 .navbar-title { display: inline-block; font-size: 1.4em; line-height: 50px; margin: 0 0 0 20px; padding: 0; color: #737373; }
 .navbar-tabs { text-align: center; }
-.navbar-tab { display: inline-block; line-height: 25px; margin: 0 30px 0 30px; padding: 13px 0 10px 0; border-bottom: 2px solid transparent; color: #737373; cursor: pointer; transition: border-color 0.4s; }
+.navbar-tab { display: inline-block; font-size: 1.1em; line-height: 25px; margin: 0 30px 0 30px; padding: 13px 0 10px 0; border-bottom: 2px solid transparent; color: #737373; cursor: pointer; transition: border-color 0.4s; }
 .navbar-tab:hover { color: #262626; border-color: #3182bd; }
 .navbar-tab.selected { font-weight: bold; color: #262626; border-color: #3182bd; }
 
@@ -118,7 +118,7 @@ button.diagram-evaluating { color: #2ca02c; }
 
 /* Animated loader */
 
-#loader-overlay { position: absolute; top: 0; left: 0; background-color: #e5e5e5; width: 100%; height: 100%; }
+#loader-overlay { position: absolute; top: 0; left: 0; background-color: #e5e5e5; width: 100%; height: 100%; z-index: 3; }
 #loader-overlay.ng-leave { -webkit-animation: fadeOut 1s; }
 .loader {
     margin: 25px auto;
