--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -173,9 +173,10 @@ button.diagram-evaluating { color: #2ca02c; }
     background-color: #c7e9c0;
     border: 1px solid #31a354;
     border-radius: 10px;
+    z-index: 4;
 }
 
 #deployment-notification.ng-leave { -webkit-animation: slideOutDown 0.6s; }
 #deployment-notification.ng-enter { -webkit-animation: slideInUp 0.6s; }
 
-#notification-exit { color: #31a354; position: absolute; right: 5px; top: 3px; cursor: pointer; z-index: 2000; }
+#notification-exit { color: #31a354; position: absolute; right: 5px; top: 3px; cursor: pointer; }
