--- a/service/src/main/resources/python_driver.mustache
+++ b/service/src/main/resources/python_driver.mustache
@@ -7,7 +7,7 @@
 blocks_to_execute = []
 
 <%#blocks%>
-<%name%> = <%definitionName%>('<%name%>')
+<%name%> = <%definitionName%>('<%name%>','<%uniqueName%>')
 <%name%>.parameters = {<%& parameters%>}
 <%name%>.input_connectors = {<%& inputs%>}
 blocks_to_execute.append(<%name%>)
