--- a/studio/public/scripts/components/browser/browser.css
+++ b/studio/public/scripts/components/browser/browser.css
@@ -29,3 +29,7 @@
 
 #ghost { position: absolute; background-color: #fff; z-index: 1101; opacity: 0.6; border-radius: 10px; }
 
+input:invalid {
+    color:red;
+}
+
