--- a/studio/public/scripts/components/browser/browser.css
+++ b/studio/public/scripts/components/browser/browser.css
@@ -29,7 +29,23 @@
 
 #ghost { position: absolute; background-color: #fff; z-index: 1101; opacity: 0.6; border-radius: 10px; }
 
-input:invalid {
-    color:red;
+.error_container {
+    opacity: 1;
+    color: red;
+    border: 1px solid lightgrey;
+    padding: 2px;
 }
 
+.error_message {
+    opacity: 1;
+}
+
+.fade.ng-hide-remove {
+    transition:0.4s linear all;
+    opacity:1;
+}
+
+.fade.ng-hide {
+    transition:0.4s linear all;
+    opacity:0;
+}
