--- a/studio/public/scripts/components/browser/blockConfig.html
+++ b/studio/public/scripts/components/browser/blockConfig.html
@@ -1,6 +1,7 @@
-<div>
 
-    <form name="blockNameForm">
+<div class="block-config-container">
+
+    <form class="block-name-form" name="blockNameForm">
         <div class="block-parameter">
             <label>Block Name</label>
             <div class="input-group">
@@ -8,12 +9,12 @@
                     <i class="fa fa-file-text-o"></i>
                 </span>
                 <input class="form-control" type="text" name="blockName" ng-model="block.name" ng-required="true" ng-minlength="3" ng-maxlength="15" pattern="[a-zA-Z0-9_ ]+" />
-                <div class="fade error_container" ng-show="blockNameForm.blockName.$dirty && blockNameForm.blockName.$invalid">
-                    <small class="fade error error_message" ng-show="blockNameForm.blockName.$error.required">required</small>
-                    <small class="fade error error_message" ng-show="blockNameForm.blockName.$error.minlength">min</small>
-                    <small class="fade error error_message" ng-show="blockNameForm.blockName.$error.maxlength">max</small>
-                    <small class="fade error error_message" ng-show="blockNameForm.blockName.$error.pattern">pattern</small>
-                </div>
+            </div>
+            <div class="fade error_container" ng-show="blockNameForm.blockName.$dirty && blockNameForm.blockName.$invalid">
+                <small class="fade error error_message" ng-show="blockNameForm.blockName.$error.required">required</small>
+                <small class="fade error error_message" ng-show="blockNameForm.blockName.$error.minlength">min</small>
+                <small class="fade error error_message" ng-show="blockNameForm.blockName.$error.maxlength">max</small>
+                <small class="fade error error_message" ng-show="blockNameForm.blockName.$error.pattern">pattern</small>
             </div>
         </div>
     </form>
@@ -60,4 +61,5 @@
         </div>
 
     </div>
+
 </div>
