--- a/studio/public/scripts/components/browser/browser.css
+++ b/studio/public/scripts/components/browser/browser.css
@@ -32,8 +32,6 @@
 .error_container {
     opacity: 1;
     color: red;
-    border: 1px solid lightgrey;
-    padding: 2px;
 }
 
 .error_message {
@@ -49,3 +47,18 @@
     transition:0.4s linear all;
     opacity:0;
 }
+
+.block-config-container {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    overflow: auto;
+}
+
+.block-name-form input.ng-invalid {
+    color: red;
+    border: 1px solid red;
+}
+
+
