--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -180,3 +180,94 @@ button.diagram-evaluating { color: #2ca02c; }
 #deployment-notification.ng-enter { -webkit-animation: slideInUp 0.6s; }
 
 #notification-exit { color: #31a354; position: absolute; right: 5px; top: 3px; cursor: pointer; }
+
+.diagrams-menu-header { height: 50px; width: 100%; }
+
+.diagrams-menu-body {
+    background: darkgray;
+    height: calc(100% - 125px);
+    width: 100%;
+    overflow-y: auto;
+}
+.diagrams-menu-body-item {
+    height: auto;
+    background: white;
+    margin: 10px;
+    padding: 5px;
+}
+
+.diagrams-menu-body-item-name {
+    height: 25px;
+    width: calc(100% - 10px);
+    text-align: center;
+    vertical-align: middle;
+    margin: 5px;
+}
+
+.diagrams-menu-body-item-name:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }
+
+.diagrams-menu-body-item-name:hover { cursor: pointer; color: lightskyblue }
+
+.diagrams-menu-body-item-options {
+    height: 25px;
+    width: calc(100% - 10px);
+    margin: 5px;
+    vertical-align: middle;
+}
+
+.diagrams-menu-body-item-options-toggle {
+    float: left;
+    padding: 5px;
+    height: 25px;
+    width: 90px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.diagrams-menu-body-item-options-toggle:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }
+
+.diagrams-menu-body-item-options-toggle:hover { cursor: pointer; }
+
+.diagrams-menu-body-item-options-delete {
+    float: right;
+    height: 25px;
+    width: calc(100% - 130px);
+    text-align: center;
+    vertical-align: middle;
+}
+
+.diagrams-menu-body-item-options-delete:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }
+
+.diagrams-menu-body-item-options-delete:hover { cursor: pointer; color: red }
+
+.diagrams-menu-body-item-info-container { opacity: 1; }
+
+.diagrams-menu-body-item-info {
+    opacity: 1;
+    height: auto;
+    width: calc(100% - 10px);
+    margin: 5px;
+    padding: 5px;
+}
+
+.diagrams-menu-body-item-info:hover { cursor: default; }
+
+.diagrams-menu-footer { height: 50px; width: 100%; }
+
+.diagrams-menu-footer-name {
+    width: 100%;
+    height: 50px;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.diagrams-menu-footer-name:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }
+
+.diagrams-menu-footer-company {
+    width: 100%;
+    height: 25px;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.diagrams-menu-footer-company:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }
