Differentiate between online and offline blocks in definitions. Definition tells us if a block generates a model. Also filter online only blocks from UI definition browser.

--- a/studio/public/scripts/components/browser/browser.html
+++ b/studio/public/scripts/components/browser/browser.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="browser-item browser-definitions"
-         ng-repeat="definition in page.definitions"
+         ng-repeat="definition in page.definitions | filter: {onlineOnly:false}"
          ng-mousedown="mouseDown($event, definition);"
          ng-click="show(definition);">
 
