--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -16,26 +16,31 @@
 
         <div class="diagrams-menu-body">
             <div class="diagrams-menu-body-item" ng-model="diagrams" ng-repeat="d in diagrams">
-                <div class="diagrams-menu-body-item-name" ng-click="loadDiagram(d.name)">
-                    {{d.name}}
-                </div>
-                <div class="diagrams-menu-body-item-options">
-                    <div class="diagrams-menu-body-item-options-toggle" ng-click="d.showProperties = !d.showProperties">
-                        <i class="fa ng-class:{ 'fa-toggle-on': d.showProperties, 'fa-toggle-off': !d.showProperties }"></i>
-                        <small>Properties</small>
+                <div class="diagrams-menu-body-item-container">
+                    <div class="diagrams-menu-body-item-name ng-class:{'selected-diagram-text': d.selected}" ng-click="loadDiagram(d.name)">
+                        {{d.name}}
                     </div>
-                    <div class="diagrams-menu-body-item-options-delete" ng-click="deleteDiagram(d.name)">
-                        <i class="fa fa-trash-o fa-lg"></i>
+                    <div class="diagrams-menu-body-item-expand" ng-click="d.showProperties = !d.showProperties">
+                        <i class="fa fa-ellipsis-v"></i>
                     </div>
                 </div>
-                <div class="fade diagrams-menu-body-item-info-container" ng-show="d.showProperties">
-                    <div ng-show="d.description" class="fade diagrams-menu-body-item-info">
-                        <i class="fa fa-file-text-o"></i>
-                        <small>{{d.description}}</small>
+                <div class="fade diagrams-menu-body-item-expand-container" ng-show="d.showProperties">
+                    <div class="diagrams-menu-body-item-expand-row">
+                        <div class="diagrams-menu-body-item-delete" ng-click="deleteDiagram(d.name)">
+                            <i class="fa fa-trash-o fa-lg"></i>
+                        </div>
                     </div>
-                    <div ng-show="d.owner" class="fade diagrams-menu-body-item-info">
-                        <i class="fa fa-user"></i>
-                        <small>{{d.owner}}</small>
+                    <div class="diagrams-menu-body-item-expand-row" ng-show="d.owner">
+                        <div class="diagrams-menu-body-item-owner">
+                            <i class="fa fa-user"></i>
+                            <small>{{d.owner}}</small>
+                        </div>
+                    </div>
+                    <div ng-show="d.description" class="diagrams-menu-body-item-expand-row-auto">
+                        <div class="diagrams-menu-body-item-description">
+                            <i class="fa fa-pencil-square-o"></i>
+                            <small>{{d.description}}</small>
+                        </div>
                     </div>
                 </div>
             </div>
