--- a/service/src/main/resources/sparkstreaming_driver.mustache
+++ b/service/src/main/resources/sparkstreaming_driver.mustache
@@ -1,39 +1,37 @@
 {{=<% %>=}}
 
-import emr.analytics.spark.algorithms.Utilities
-import emr.analytics.spark.algorithms.Requests
-
 import org.apache.spark.streaming._
-import org.apache.spark.streaming.kafka._
-
 import scala.util.parsing.json._
 
-val appName = "DotProduct"
+<%#packageNames%>
+import <%.%>
+<%/packageNames%>
 
-val zkQuorum = "localhost:2181"
-val topics = "runtime"
-val labels = "PICK_P101/PV.CV,PICK_T101/PV.CV,PICK_F101/PV.CV"
-val model = Array(1.0, 1.0, 1.0)
-val url = "http://172.16.167.131:8000/updatedata/InferredCalc1"
-val write_tag = "PICK_INFER_MEAS/INFER1.CV"
+<%#models%>
+val <%variableName%> = Array(<%arguments%>)
+<%/models%>
 
-val topicsMap = topics.split(",").map(t => (t,1)).toMap
-val input = KafkaUtils.createStream(ssc, zkQuorum, appName, topicsMap)
+val appName = ssc.sparkContext.appName
 
-input.map(x => JSON.parseFull(x._2)).foreachRDD(rdd => {
+<%#streamingContext%>
+
+val stream = <%className%>.<%methodName%>(<%& arguments%>)
+
+stream.map(x => x._2).foreachRDD(rdd => {
 
     if (!rdd.isEmpty()){
 
         rdd.foreach(point => {
 
-            // filter by list of columns
-            val features = Utilities.columns(point.get, labels)
+            // parse json
+            val <%variableName%> = JSON.parseFull(point).get
 
-            // dot product of 2 arrays
-            val dp = Utilities.dotProduct(features, model)
+<%/streamingContext%>
 
-            // post value to opc
-            Requests.postOpcValue(url, write_tag, dp.toString)
+            <%#blocks%>
+            val <%variableName%> = <%className%>.<%methodName%>(<%& arguments%>)
+
+            <%/blocks%>
         })
     }
 })
