--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -104,8 +104,9 @@
 
                 <div class="diagram-container">
 
-                    <diagram view-model="diagramViewModel"
-                             is-online="false"
+                    <diagram id="offline-diagram"
+                             view-model="diagramViewModel"
+                             is-online="onlineCanvas"
                              nodes="nodes"
                              library="library"
                              load-sources="loadSources"
@@ -125,8 +126,9 @@
 
                 <div ng-if="!compiling" class="diagram-container">
 
-                    <diagram view-model="onlineViewModel"
-                             is-online="true"
+                    <diagram id="online-diagram"
+                             view-model="onlineViewModel"
+                             is-online="onlineCanvas"
                              nodes="nodes"
                              library="library"
                              load-sources="loadSources"
