--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -33,13 +33,13 @@
                     <div class="diagrams-menu-body-item-expand-row" ng-show="d.owner">
                         <div class="diagrams-menu-body-item-owner">
                             <i class="fa fa-user"></i>
-                            <small>{{d.owner}}</small>
+                            <span class="span-text">{{d.owner}}</span>
                         </div>
                     </div>
                     <div ng-show="d.description" class="diagrams-menu-body-item-expand-row-auto">
                         <div class="diagrams-menu-body-item-description">
                             <i class="fa fa-pencil-square-o"></i>
-                            <small>{{d.description}}</small>
+                            <span class="span-text">{{d.description}}</span>
                         </div>
                     </div>
                 </div>
