Updated spark streaming compile to handle streaming and red data sources.

--- a/service/src/main/resources/sparkstreaming_driver.mustache
+++ b/service/src/main/resources/sparkstreaming_driver.mustache
@@ -13,9 +13,21 @@ val <%variableName%> = Array(<%arguments%>)
 
 val appName = ssc.sparkContext.appName
 
-<%#blocks%>
+<%#streamingOperations%>
 val <%variableName%> = <%className%>.<%methodName%>(<%& arguments%>)
-<%/blocks%>
+<%/streamingOperations%>
+
+<%#hasRddOperations%>
+
+<%streamingVariable%>.foreachRDD(<%rddVariable%> => {
+
+<%#rddOperations%>
+val <%variableName%> = <%className%>.<%methodName%>(<%& arguments%>)
+<%/rddOperations%>
+
+})
+
+<%/hasRddOperations%>
 
 ssc.start()
 ssc.awaitTermination()
